# clp-ffi-java

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  assembly-lib.xml  assembly-package.xml  assembly.xml  lint-requirements.txt  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/native-lib-build/: action.yml
.github/workflows/: build-and-release-package.yml  build-package.yml  lint.yml
integration-tests/jar-load-native-lib/: pom.xml
integration-tests/jar-load-native-lib/src/main/java/com/yscope/clp/: Main.java
src/main/cpp/libclp_ffi_java/: ClpIrOutputStreamState.hpp  GeneralException.hpp  JavaException.cpp  JavaException.hpp  JavaPrimitiveArrayElementsDeleter.cpp  JavaPrimitiveArrayElementsDeleter.hpp  Java_AbstractClpIrOutputStream.cpp  Java_AbstractClpWildcardQueryEncoder.cpp  Java_EightByteClpIrOutputStream.cpp  Java_EightByteClpWildcardQueryEncoder.cpp  Java_FourByteClpIrOutputStream.cpp  Java_MessageDecoder.cpp  Java_MessageEncoder.cpp  README.md  common.cpp  common.hpp  common.inc  common.tpp  static_init.cpp  static_init.hpp
src/main/cpp/libclp_ffi_java/ir_stream/: common.cpp  common.hpp  common.inc  common.tpp
src/main/java/com/yscope/clp/compressorfrontend/: AbstractClpEncodedSubquery.java  AbstractClpWildcardQueryEncoder.java  BuiltInVariableHandlingRuleVersions.java  ByteSegment.java  ByteSegments.java  DecodingOptimizedEncodedMessage.java  EightByteClpEncodedSubquery.java  EightByteClpWildcardQueryEncoder.java  EmptyArrayUtils.java  EncodedMessage.java  FlattenedByteArray.java  FlattenedByteArrayFactory.java  MessageDecoder.java  MessageEncoder.java  NativeLibraryLoader.java
src/main/java/com/yscope/clp/irstream/: AbstractClpIrOutputStream.java  EightByteClpIrOutputStream.java  FourByteClpIrOutputStream.java
src/test/java/com/yscope/clp/compressorfrontend/: EncodingTests.java
src/test/java/com/yscope/clp/irstream/: TestClpIrOutputStream.java
src/test/resources/: log4j2.properties
tools/scripts/ubuntu-focal/: install-deps-and-build-native-lib.sh  install-deps-build-test-package-native-lib.sh
